--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,14 @@ spring:
     name: Chatting
 
   datasource:
-    url: jdbc:mysql://localhost:3306/mydb
-    username: user
-    password: pass1234
+    url: jdbc:mysql://3.34.43.48:3306/chatting
+    username: developer
+    password: developer!!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: chatStorage
+      uri: mongodb://developer:developer!!@3.34.43.48:27017/chatStorage?authSource=admin
 
   jpa:
     hibernate:
